# python-rasenmaeher-miniwerk

./: .bumpversion.cfg  .bumpversion.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.rst  example_env.sh  pyproject.toml  tox.ini
.github/workflows/: build.yml  pull_request.yml  push_to_main.yml
docker/: entrypoint-test.sh  entrypoint.sh
src/miniwerk/: __init__.py  config.py  console.py  helpers.py  jwt.py  lewrap.py  manifests.py  mkcwrap.py
tests/: conftest.py  test_config.py  test_console.py  test_lewrap.py  test_manifests.py  test_miniwerk.py  test_mkcwrap.py
