[project]
name = "miniwerk"
version = "1.7.1"
description = "Minimal KRAFTWERK amulation to be able to run a RASENMAEHER+products deployment on any VM"
authors = [
    { name = "Eero af Heurlin", email = "eero.afheurlin@iki.fi" },
]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.11,<4.0"
dependencies = [
    "libadvian>=1.4,<2",
    "click>=8.0,<9",
    "certbot>=2.6,<3",
    "multikeyjwt>=1.2,<2",
    "aiohttp>=3.8,<4",
    "aiodns>=3.0,<4",
    "brotli>=1.0,<2",
    "cchardet>=2.1,<3 ; python_version <= '3.10'",
    "pydantic-settings>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/pvarki/python-rasenmaeher-miniwerk/"
Repository = "https://github.com/pvarki/python-rasenmaeher-miniwerk/"

[project.scripts]
miniwerk = "miniwerk.console:miniwerk_cli"

[dependency-groups]
dev = [
    "pytest>=7.4,<8",
    "coverage>=7.3,<8",
    "pytest-cov>=4.1,<5",
    "pylint>=4.0,<5",
    "black>=25.9,<26",
    "bandit>=1.8,<2",
    "mypy>=1.18,<2",
    "prek>=0.3,<1",
    "pytest-asyncio>=0.23,<1.0",
    "bump2version>=1.0,<2",
    "detect-secrets>=1.5,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniwerk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/miniwerk",
    "README.rst",
]

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict = true

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "--cov=miniwerk --cov-fail-under=65 --cov-branch"
asyncio_mode = "strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable = ["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true
